# my-rust-practice

./: Cargo.toml  README.md
basics/: Cargo.toml
basics/src/: main.rs
rust-advances/: Cargo.toml
rust-advances/src/: main.rs  test_mod.rs
rust-basics/: Cargo.toml
rust-basics/src/: main.rs
rust-finale/: Cargo.toml
rust-finale/src/: main.rs
rust-finale/test/: test.rs
rust-finale/tests/: test.rs
