[package]
name = "rust-advances"
version = "0.1.0"
authors = ["iamhyc <sudofree@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# A package is one or more crates.
# A crate is a binary or library.
# A package must contain 0/1 library crate.
# "src/main.rs" is the binary crate root,
# "src/lib.rs" is the library crate root
[target]


[dependencies]
